<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hawk</string>
    <string name="hello_world">Hello world!</string>

    <!--公共-->
    <string name="comm_request_loading">加载中...</string>
    <string name="comm_request_more">加载更多</string>
    <string name="comm_request_disable">全部都加载完了</string>
    <string name="comm_error_noneNetwork">没有网络连接</string>
    <string name="comm_error_resultIllegal">数据解析出错</string>
    <string name="comm_error_timeout">网络不给力</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="menu_delete">删除</string>
    <string name="draw_open">打开</string>
    <string name="draw_close">关闭</string>

    <!-- 抽屉菜单 -->
    <string name="draw_timeline">首页</string>
    <string name="draw_profile">用户资料</string>

    <!-- AisenUtil -->
    <string name="msg_now">刚刚</string>
    <string name="msg_today">今天</string>
    <string name="msg_yesterday">昨天</string>
    <string name="msg_few_minutes_ago">分钟前</string>
    <string name="msg_male">男</string>
    <string name="msg_female">女</string>
    <string name="msg_gender_unknow">未知</string>
    <string name="msg_ten_thousand">万</string>
    <string name="msg_url_copyed">链接已复制</string>
    <string name="msg_text_copyed">内容已复制</string>
    <string name="msg_image_copyed">图片链接已复制</string>
    <string name="msg_del_cmt_remind">确定删除评论吗？</string>

    <!-- 帮助设置 -->
    <string name="title_about">关于</string>

    <!--no more-->
    <string name="disable_status">没有更多数据了</string>
    <!--Loading-->
    <string name="loading_status">%d条数据载入中</string>
    <!-- Empty -->
    <string name="empty_status">没有数据</string>

    <string name="action_settings">Settings</string>
    <string name="action_weibo">微博</string>
    <string name="action_photo">相册</string>
    <string name="action_robot">聊天机器人</string>
    <string name="action_setting">设置</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="func_chat">聊天</string>
    <string name="func_share">分享</string>
    <string name="func_photo">相册</string>

    <string name="login_top_back">返回</string>
    <string name="chat_top_title">聊天机器人</string>
    <string name="chat_send">发送</string>

    <string name="activity_album">相册</string>

    <string name="title_activity_add_twiter">AddTwiterActivity</string>
    <string name="activity_twiter_add">发布动态</string>
    <string name="activity_twiter_hint">这一刻的想法</string>
    <string name="action_finish">发送</string>
    <string name="ui_clearwords">清除文字吗？</string>
    <string name="activity_twiter_len_limit">160</string>

    <string name="title_activity_image_chose_grid">ImageChoseGridActivity</string>
    <string name="activity_image_chose">图片</string>

    <!-- 设置界面-->
    <string name="activity_map">地图</string>
    <string name="activity_contact">基于MVP架构的联系人</string>
    <string name="activity_socket">TCP服务</string>

    <!-- 设置界面-->
    <string name="setting_title">个人设置</string>
    <string name="system_settings">设置</string>
    <string name="sudoku_setting">手势密码</string>
    <string name="update_sudoku_setting">修改手势密码</string>
    <string name="sudoku_key">sudoku_key</string>
    <string name="sudoku_switch_summary_on">开启手势密码</string>
    <string name="sudoku_switch_summary_off">关闭手势密码</string>
    <string name="sudoku_input">请输入密码</string>
    <string name="confirm_setting">确认</string>
    <string name="forget_password">忘记手势密码</string>

    <string-array name="chatPicChoose">
        <item>相册</item>
        <item>拍照</item>
    </string-array>

    <string-array name="timeline_menus">
        <item>原微博</item>
        <item>复制</item>
        <item>转发</item>
        <item>评论</item>
        <item>收藏</item>
        <item>取消收藏</item>
        <item>删除</item>
        <item>屏蔽</item>
        <item>围观</item>
    </string-array>

</resources>
