<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/chat_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="?attr/theme_color" >

        <Button
            android:id="@+id/chat_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:text="@string/login_top_back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/chat_top_title"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chat_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/chat_footer_bg" >

        <Button
            android:id="@+id/chat_send"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_style_grey"
            android:textColor="@color/comm_black"
            android:text="@string/chat_send" />

        <EditText
            android:id="@+id/chat_sendmessage"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/chat_send"
            android:background="@drawable/login_edit_normal"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/comm_black"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/chat_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/chat_bottom"
        android:layout_below="@id/chat_top"
        android:cacheColorHint="#0000"
        android:divider="@null"
        android:dividerHeight="5dp"
        android:scrollbarStyle="outsideOverlay"
        android:stackFromBottom="true" />

</RelativeLayout>